Testing for CI/CD pipeline

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,15 +2,20 @@ steps:
   - name: "gcr.io/cloud-builders/docker"
     args:
       - "build"
+      - "--no-cache"
       - "-t"
-      - "gcr.io/$PROJECT_ID/frontend:$COMMIT_SHA"
+      - "${_GCR_HOSTNAME}/$PROJECT_ID/$REPO_NAME/${_SERVICE_NAME}:$COMMIT_SHA"
+      - "."
+    id: Build
 
   - name: "gcr.io/cloud-builders/docker"
     args:
       - "push"
-      - "gcr.io/$PROJECT_ID/frontend:$COMMIT_SHA"
+      - "${_GCR_HOSTNAME}/$PROJECT_ID/$REPO_NAME/${_SERVICE_NAME}:$COMMIT_SHA"
+    id: Push
 
   - name: "gcr.io/cloud-builders/gcloud"
+    entrypoint: gcloud
     args:
       - "run"
       - "deploy"
@@ -18,4 +23,8 @@ steps:
       - "--image"
       - "gcr.io/$PROJECT_ID/frontend:$COMMIT_SHA"
       - "--platform=managed"
-      - "--region=asia-northeast1"
+      - "--region=${_DEPLOY_REGION}"
+      - "--allow-unauthenticated"
+    id: Deploy
+images:
+  - "${_GCR_HOSTNAME}/$PROJECT_ID/$REPO_NAME/${_SERVICE_NAME}:$COMMIT_SHA"
