--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,7 +26,7 @@ steps:
       - "$_SERVICE_NAME"
       - "--image"
       - "${_GCR_HOSTNAME}/$PROJECT_ID/$REPO_NAME/${_SERVICE_NAME}:$COMMIT_SHA"
-      - "--platform=managed"
+      - "--platform=${_PLATFORM}"
       - "--region=${_DEPLOY_REGION}"
       - "--allow-unauthenticated"
     id: Deploy
