--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
       - "${_GCR_HOSTNAME}/$PROJECT_ID/$REPO_NAME/${_SERVICE_NAME}:$COMMIT_SHA"
       # These variables should be updated
       - "--build-arg=REACT_APP_STAGE=prod"
-      - "--build-arg=REACT_APP_BACKEND_BASE_URL=https://growychatapp-imvbs5m4uq-an.a.run.app"
+      - "--build-arg=REACT_APP_BACKEND_BASE_URL=https://api.growy.education"
       - "--build-arg=REACT_APP_GOOGLE_OAUTH_CLIENT_ID=892433517348-ldkieko7692c89ud3mut1q7mu7k2q1qr.apps.googleusercontent.com"
       - "."
     id: Build
