--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,11 +6,11 @@ steps:
       - "-t"
       - "${_GCR_HOSTNAME}/$PROJECT_ID/$REPO_NAME/${_SERVICE_NAME}:$COMMIT_SHA"
       - "."
-    # These environment variables should be updated
-    # env:
-    #   - "REACT_APP_STAGE=${_REACT_APP_STAGE}"
-    #   - "REACT_APP_BACKEND_BASE_URL=${_REACT_APP_BACKEND_BASE_URL}"
-    #   - "REACT_APP_GOOGLE_OAUTH_CLIENT_ID=${_REACT_APP_GOOGLE_OAUTH_CLIENT_ID}"
+    #These environment variables are neede when
+    env:
+      - "REACT_APP_STAGE=${_REACT_APP_STAGE}"
+      - "REACT_APP_BACKEND_BASE_URL=${_REACT_APP_BACKEND_BASE_URL}"
+      - "REACT_APP_GOOGLE_OAUTH_CLIENT_ID=${_REACT_APP_GOOGLE_OAUTH_CLIENT_ID}"
     id: Build
 
   - name: "gcr.io/cloud-builders/docker"
