--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
+    "env-cmd": "^10.1.0",
     "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "PORT=8080 react-scripts build",
+    "build": "PORT=8080 env-cmd -f .env.production react-scripts build",
     "test": "PORT=8080 react-scripts test",
     "eject": "PORT=8080 react-scripts eject"
   },
