Updating favicons and testing cloudbuild.yaml

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,8 @@
-# This env file was exposed to public. Don't use secret key here.
+# This env file is exposed to the public. Don't use secret key here.
 # Prefix "REACT_APP_" is required for create-react-app dotenv
 # For more information, plz visit https://create-react-app.dev/docs/adding-custom-environment-variables/
+# But react-scripts doesn't load this file. So cmd-env module is used to load this file.
+# You can find cmd-env command from "build" command in package.json
 REACT_APP_STAGE=prod
 REACT_APP_BACKEND_BASE_URL=https://api.growy.education/
-REACT_APP_GOOGLE_OAUTH_CLIENT_ID=892433517348-ldkieko7692c89ud3mut1q7mu7k2q1qr.apps.googleusercontent.com
+REACT_APP_GOOGLE_OAUTH_CLIENT_ID=263540856510-6lje9pp21ad69gs8a0moa0f08np1buph.apps.googleusercontent.com
