--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
+    "class-transformer": "^0.5.1",
     "env-cmd": "^10.1.0",
     "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
