--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/x-data-grid": "^6.4.0",
@@ -18,10 +19,12 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "env-cmd": "^10.1.0",
     "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "reflect-metadata": "^0.1.13",
