--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/x-data-grid": "^6.4.0",
+    "@mui/x-date-pickers": "^6.8.0",
     "@react-oauth/google": "^0.11.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -20,6 +21,7 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.8",
     "env-cmd": "^10.1.0",
     "joi": "^17.9.2",
     "react": "^18.2.0",
