--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-calendar": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.0",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.45.0",
     "react-image-file-resizer": "^0.4.8",
     "react-router-dom": "^6.11.1",
