--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.8",
     "env-cmd": "^10.1.0",
+    "fuse.js": "^7.0.0",
     "joi": "^17.9.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
