LP feature deleted

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Growy",
-  "name": "個別指導塾Growy公式サイト",
+  "name": "個別指導塾Growyメンバーズサイト",
   "icons": [
     {
       "src": "favicon.jpg",
